--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -7,30 +7,29 @@
 </head>
 <body>
 <div class="main">
+  <div class="top">
   <div class="contacts">
     <strong>Наши контакты:</strong><br>
     +9-098-765-4321<br>
     +9-0123-456-890<br>
     info@asia-holidays.com
   </div>
-  <div class="toprow">
-    <img class="flags" src="img/flag.png" alt="flags" />
-    <ul class="countries">
-      <li><a href="#">Индия</a></li>
-      <li><a href="#">Непал</a></li>
-      <li><a href="#">Тибет</a></li>
-      <li><a href="#">Бутан</a></li>
-      <li class="shri"><a href="#">Шри-Ланка</a></li>
-      <li><a href="#">Мальдивы</a></li>
-    </ul>
-<img class="holiday" src="img/holidays.png" alt="holiday" />
+  <img class="holiday" src="img/holidays.png" alt="holiday" />
+  <div class="countries">
+      <div class="cunt1"><a href="#">Индия</a></div>
+      <div class="cunt2"><a href="#">Непал</a></div>
+      <div class="cunt3"><a href="#">Тибет</a></div>
+      <div class="cunt4"><a href="#">Бутан</a></div>
+      <div class="cunt5"><a href="#">Шри-Ланка</a></div>
+      <div class="cunt6"><a href="#">Мальдивы</a></div>
+    </div>
 </div>
 <div class="beach">
   <img src="img/beach.png" alt="beach" />
 </div>
 <ul class="menu">
   <li><a href="#">Главная</a></li>
-  <li><a href="#">Путешествие</a>
+  <li class="tours"><a href="#">Путешествие &#x25bc;</a>
   <ul class="submenu">
     <li><a href="#">Путешествие 1</a></li>
     <li><a href="#">Путешествие 2</a></li>
@@ -63,6 +62,7 @@
   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+</div>
 </div>
 </div>
 <div class="footer">
