--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -9,7 +9,7 @@
 <h1>Fitness</h1>
 <ul class="line">
   <li>Главная</li>
-  <li class="choose">Товары</li>
+  <li>Товары</li>
   <li>О_нас</li>
   <li>Контакты</li>
 </ul>
