--- a/Project 4.1/index.html
+++ b/Project 4.1/index.html
@@ -7,19 +7,20 @@
 <title>Front Page</title>
 </head>
 <body>
+  <div class="topmenu">
 <ul class="header">
-  <li class="choose"><a class="choose" href="#">Meu YouBike</a></li>
-  <li class="choose"><a class="choose" href="#">Vender</a></li>
-  <li class="choose"><a class="choose" href="#">Forum</a></li>
-  <li class="choose"><a class="choose" href="#">Contato</a></li>
-  <li class="choose"><a class="choose" href="#">Ajuda</a></li>
-  <li class="flag"><a href="#">Minhas Ofertas</a></li>
-  <li class="ola">Ola!<a class="under" href="#">Entrar</a> ou <a class="under" href="#">Cadastre-se</a></li>
-</ul>
+  <li class="choose"><a href="#">Meu YouBike</a></li>
+  <li class="choose"><a href="#">Vender</a></li>
+  <li class="choose"><a href="#">Forum</a></li>
+  <li class="choose"><a href="#">Contato</a></li>
+  <li class="choose"><a href="#">Ajuda</a></li>
+  </ul>
+  <div class="flag"><a href="#">Minhas Ofertas</a></div>
+  <div class="ola">Ola!<a class="under" href="#">Entrar</a> ou <a class="under" href="#">Cadastre-se</a></div>
+</div>
 <!-- <div class="page"> -->
 <div class="box">
   <div class="cadastre">Cadastre-se</div>
-  <hr>
   <div class="facebook">
     <a href="http://facebook.com" target="_blank"><img src="img/fb.png"></a>
   </div>
