--- a/Project/index.html
+++ b/Project/index.html
@@ -6,12 +6,14 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 <body>
-<div class="name">
+  <div class="block1">
+<h1 class="name">
 Иванов Иван Иванович
-</div>
+</h1>
 <img class="pic" src="kim.jpeg">
 <p class="info">Works in North Korea</p>
-<hr>
+</div>
+<div class="block2">
   <div class="headings">
     Studies for:
   </div>
@@ -20,7 +22,8 @@
     <li>Point 2</li>
     <li>Point 3</li>
     </ul>
-<hr>
+</div>
+<div class="block3">
   <div class="headings">
     My contact:
   </div>
@@ -31,12 +34,14 @@
     My profile:
   </div>
   <a class="link" href="http://google.com" target="_blanc">google.com</a>
-  <hr>
+</div>
+<div class="block4">
   <div class="headings">
     My Feedback:
   </div>
   <div class="cont">
     Need more power
   </div>
+</div>
 </body>
 </html>
