corrections by comments done

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+  <div class="wrapper">
 <h1>Fitness</h1>
 <ul class="line">
   <li>Главная</li>
@@ -13,6 +14,7 @@
   <li>О_нас</li>
   <li>Контакты</li>
 </ul>
+<div class="content">
 <div>
   <ul class="list">
     <li>Ноутбуки</li>
@@ -23,6 +25,7 @@
     <li>Автотовары</li>
   </ul>
 </div>
+<div class="bike-description">
 <div>
   <img src="img/bike.png" alt="bike" />
 </div>
@@ -34,6 +37,8 @@
    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
    sunt in culpa qui officia deserunt mollit anim id est laborum.
 </div>
+</div>
+</div>
 <ul class="bottom">
 <li>Главная</li>
 <li>Товары</li>
@@ -41,5 +46,6 @@
 <li>Контакты</li>
 <li class="rights">2014 &copy; All rights reserved</li>
 </ul>
+</div>
 </body>
 </html>
