--- a/Project/index.html
+++ b/Project/index.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 <body>
-  <div class="block1">
+  <div class="main-info">
 <h1 class="name">
 Иванов Иван Иванович
 </h1>
 <img class="pic" src="kim.jpeg">
 <p class="info">Works in North Korea</p>
 </div>
-<div class="block2">
+<div class="education">
   <div class="headings">
     Studies for:
   </div>
@@ -23,7 +23,7 @@
     <li>Point 3</li>
     </ul>
 </div>
-<div class="block3">
+<div class="contacts">
   <div class="headings">
     My contact:
   </div>
@@ -35,7 +35,7 @@
   </div>
   <a class="link" href="http://google.com" target="_blanc">google.com</a>
 </div>
-<div class="block4">
+<div class="feedback">
   <div class="headings">
     My Feedback:
   </div>
