--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -28,20 +28,27 @@
   <img src="img/beach.png" alt="beach" />
 </div>
 <ul class="menu">
-  <li><a href="#">Главная</a></li>
-  <li class="tours"><a href="#">Путешествие &#x25bc;</a>
+  <li><a class="single-points" href="#">Главная</a></li>
+  <li><a class="lists" href="#">Путешествие &#x25BE;</a>
   <ul class="submenu">
     <li><a href="#">Путешествие 1</a></li>
     <li><a href="#">Путешествие 2</a></li>
     <li><a href="#">Путешествие 3</a></li>
 </ul>
 </li>
-  <li><a href="#">Услуги</a></li>
-  <li><a href="#">Партнерам</a></li>
-  <li><a href="#">Отзывы клиентов</a></li>
-  <li><a href="#">О нас</a></li>
-  <li><a href="#">Контакты</a></li>
+  <li><a class="lists" href="#">Услуги &#x25BE;</a>
+    <ul class="submenu">
+      <li><a href="#">Услуга 1</a></li>
+      <li><a href="#">Услуга 2</a></li>
+      <li><a href="#">Услуга 3</a></li>
+  </ul>
+  </li>
+  <li><a class="lists" href="#">Партнерам &#x25BE;</a></li>
+  <li><a class="single-points" href="#">Отзывы клиентов</a></li>
+  <li><a class="single-points" href="#">О нас</a></li>
+  <li><a class="single-points" href="#">Контакты</a></li>
 </ul>
+<div class="content">
 <div class="info">
   <strong>Информация</strong><br>
   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
@@ -62,6 +69,7 @@
   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
   Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
+</div>
 </div>
 </div>
 </div>
