--- a/Project 4.1/index.html
+++ b/Project 4.1/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
 <title>Front Page</title>
 </head>
 <body>
@@ -35,14 +36,14 @@
           <input type="text" name="name" value="" placeholder="Password Confirm">
         </form>
         <form class="checkbox" action="/" method="post">
-          <label><input type="checkbox" name="name" value="">Send me Youbike updates and tips</label>
+          <input type="checkbox" name="name" value=""><label class="check">Send me Youbike updates and tips</label>
         </form>
         <form class="submit">
         <input type="submit" value="Create my Account">
       </form>
       <div class="terms">
-        By clicking the button above, you agree to the Terms of Service Xiew our
-        Privacy Policy.
+        By clicking the button above, you agree to the Terms of Service
+        <br> Xiew our Privacy Policy.
       </div>
 </div>
 </div>
