JS homework added

--- a/Project 4.1/index.html
+++ b/Project 4.1/index.html
@@ -36,7 +36,8 @@
           <input type="text" name="name" value="" placeholder="Password Confirm">
         </form>
         <form class="checkbox" action="/" method="post">
-          <input type="checkbox" name="name" value=""><label class="check">Send me Youbike updates and tips</label>
+          <input type="checkbox" name="name" value="" id="click-checkbox">
+          <label class="check" for='click-checkbox'>Send me Youbike updates and tips</label>
         </form>
         <form class="submit">
         <input type="submit" value="Create my Account">
