--- a/Project 5/index.html
+++ b/Project 5/index.html
@@ -42,24 +42,67 @@
   на сумму:
 </div>
 </div>
+<div class="search">
+<div class="search-auto">
+</div>
+<div class="search-tire">
+  <p class="tire">поиск шин</p>
+  <div class="tire-size">
+  <p>Размер:</p>
+  <form action="#">
+    <select>
+      <option> </option>
+      <option>1</option>
+      <option>2</option>
+      </select>
+  </form>
+  <p> / </p>
+  <form action="#">
+    <select>
+      <option> </option>
+      <option>1</option>
+      <option>2</option>
+    </select>
+  </form>
+</div>
+<div class="tire-r">
+  <p>R</p>
+  <form action="#">
+    <select>
+      <option> </option>
+      <option>1</option>
+      <option>2</option>
+      </select>
+  </form>
+</div>
+<div class="tire-season">
+  <p>Сезон:</p>
+  <form class="t-season" action="#">
+    <label><input type="checkbox" name="name">лето</label>
+    <label><input type="checkbox" name="name">зима</label>
+    <label><input type="checkbox" name="name">всесез</label>
+</div>
+</div>
+<div class="search-disc">
+</div>
+</div>
 <div class="catalog">
   <div class="cat">
 КАТАЛОГ ПРОДУКЦИИ:
   </div>
   <div class="tires1">
 ШИНЫ
+  <div>
+    <a class="tirs" href="#">Наименование 1</a>
+    <a class="tirs" href="#">Наименование 2</a>
+    <a class="tirs" href="#">Наименование 3</a>
+    <a class="tirs" href="#">Наименование 4</a>
   </div>
-    <a class="tirs" href="#">12"</a>
-    <a class="tirs" href="#">13"</a>
-    <a class="tirs" href="#">14"</a>
-    <a class="tirs" href="#">15"</a>
-    <a class="tirs" href="#">15 б\у"</a>
-    <a class="tirs" href="#">16"</a>
-    <a class="tirs" href="#">16С"</a>
-    <a class="tirs" href="#">17"</a>
-    <a class="tirs" href="#">17 б\у"</a>
-    <a class="tirs" href="#">17.5"</a>
-  </div>
+</div>
+<!-- <div class="discs">
+  ДИСКИ
+</div> -->
+</div>
   <div class="content">
     Popular goods
   </div>
