rework by comments done

--- a/JS2/index.html
+++ b/JS2/index.html
@@ -5,6 +5,7 @@
 <title>Front Page</title>
 <link rel="stylesheet" href="css/bootstrap.css"/>
 <link rel="stylesheet" href="css/build.css"/>
+<link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   <script src="../JS2/script/script.js"></script>
