--- a/JS3/index.html
+++ b/JS3/index.html
@@ -7,7 +7,17 @@
 <link rel="stylesheet" href="css/build.css"/> -->
 </head>
 <body>
-  
+  <!-- <form name="clockform">
+   <p>Время:
+   <input name="clock" size="12" maxlength="12" value="00:00:00.00">
+   Метка:
+   <input name="label" size="12" maxlength="40" value="">
+   <input name="starter" type="button" value="Старт/Стоп">
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <input name="clearer" type="button" value="Сбросить всё">
+   </p><p id="marker">
+   </p>
+  </form> -->
   <script src="../JS3/script/script.js"></script>
 </body>
 </html>
